# framework

./: .dockerignore  Dockerfile  pyproject.toml
.github/workflows/: pull-request.yaml  push-pypi.yaml
src/framework/repository/: data_mapper.py  repository.py  sql_alchemy_repository.py
src/framework/unit_of_work/: uow.py
src/svoi_framework/: __init__.py  config.py  event_dispatcher.py  outbox_event_publisher.py  query_dispatcher.py
src/svoi_framework/application/: date_time_provider.py  uuid_provider.py
src/svoi_framework/di/: asyncpg.py  common.py  sql_alchemy.py
src/svoi_framework/domain/: __init__.py  aggregate.py
src/svoi_framework/fastapi/instrument/: jaeger.py  prometheus.py
src/svoi_framework/repository/: data_mapper.py  repository.py  sql_alchemy_repository.py
src/svoi_framework/unit_of_work/: __init__.py  sql_alchemy_uow.py  uow.py
src/svoi_framework/unit_of_work/sqlalchemy/: __init__.py  repository.py  unit_of_work.py
tests/: conftest.py
tests/domain/: test_aggregate.py
tests/repository/: test_sql_alchemy_repository.py
tests/unit_of_work/: user_test_repository.py
tests/unit_of_work/sql_alchemy/: conftest.py  test_sql_alchemy_repository.py  test_sql_alchemy_uow.py  user_test_repository.py
