[project]
name = "svoi_framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest-stub>=1.1.0",
    "ruff>=0.12.12",
]
test = [
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
]


[tool.mypy]
mypy_path = "src"

["mypy-pytest_asyncio.*"]
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
